# Game_tec_prog

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ranking.txt  run.sh
include/: Bone.hpp  Camera.hpp  Character.hpp  Cogumelo.hpp  Collectable.hpp  CollisionManager.hpp  Element.hpp  Elemento.hpp  Enemy.hpp  Ente.hpp  Entidade.hpp  Entity.hpp  EntityList.hpp  EntityType.hpp  ExtinctionLevel.hpp  Fire.hpp  Fogo.hpp  Game.hpp  GraphicsManager.hpp  LaserBall.hpp  Level.hpp  List.hpp  ListEntities.hpp  Lista.hpp  ListaEntidades.hpp  Mamenchissauro.hpp  Menu.hpp  Mushroom.hpp  Obstacle.hpp  Personagem.hpp  Physics.hpp  Plataforma.hpp  Platform.hpp  Player.hpp  Projectable.hpp  ResourceManager.hpp  ResourceType.hpp  Tanystropheus.hpp  Velociraptor.hpp
include/entities/: Element.hpp  Ente.hpp  Entity.hpp  EntityType.hpp  List.hpp  ListEntities.hpp
include/entities/characters/: Character.hpp  DinoBoss.hpp  Enemy.hpp  Player.hpp  Pterodactyl.hpp  Velociraptor.hpp
include/entities/obstacles/: Fire.hpp  Obstacle.hpp  Platform.hpp  Vine.hpp
include/entities/projectile/: LaserBall.hpp  Projectile.hpp
include/levels/: ExtinctionLevel.hpp  ForestLevel.hpp  Level.hpp
include/managers/: CollisionManager.hpp  GraphicsManager.hpp  Physics.hpp  ResourceManager.hpp  TextureManager.hpp  TimeManager.hpp
include/state_machine/: ExtinctionLevelState.hpp  ForestLevelState.hpp  Menu.hpp  Ranking.hpp  State.hpp
src/: Camera.cpp  Ente.cpp  Game.cpp  Main.cpp  Physics.cpp
src/entities/: Ent.cpp  Ente.cpp  Entidade.cpp  Entity.cpp  ListEntities.cpp  Player.cpp
src/entities/characters/: Character.cpp  DinoBoss.cpp  Enemy.cpp  Mamenchissauro.cpp  Player.cpp  Pterodactyl.cpp  Tanystropheus.cpp  Velociraptor.cpp
src/entities/collectables/: Bone.cpp  Collectable.cpp
src/entities/obstacles/: Cogumelo.cpp  Fire.cpp  Fogo.cpp  Mushroom.cpp  Obstacle.cpp  Plataforma.cpp  Platform.cpp  Vine.cpp
src/entities/personagens/: Enemy.cpp  Mamenchissauro.cpp  Personagem.cpp  Player.cpp  Tanystropheus.cpp  Velociraptor.cpp
src/entities/projectables/: LaserBall.cpp  Projectable.cpp
src/entities/projectile/: LaserBall.cpp  Projectile.cpp
src/entities/projectiles/: LaserBall.cpp  Projectile.cpp
src/levels/: ExtinctionLevel.cpp  ForestLevel.cpp  Level.cpp
src/listas/: Elemento.cpp  ListaEntidades.cpp
src/lists/: EntityList.cpp
src/managers/: CollisionManager.cpp  GraphicsManager.cpp  Physics.cpp  TimeManager.cpp
src/state_machine/: ExtinctionLevelState.cpp  ForestLevelState.cpp  Menu.cpp  Ranking.cpp  State.cpp
temp/: Bone.hpp  Cogumelo.hpp  Collectable.hpp  Enemy.hpp  Fogo.hpp  ForestLevel.hpp  Level.hpp  Lista.hpp  ListaEntidades.hpp  Mamenchissauro.hpp  Obstacle.hpp  Projectable.hpp  Tanystropheus.hpp  Velociraptor.hpp
